Add the empty_string_as_null option for ``COPY FROM``.
If ``empty_string_as_null`` is ``true``, then all column's values
represented by an empty string, including a quoted empty string,
are set to``NULL``.